...
    Details: {
      screen: PokemonDetails,
      options: { tabBarButtonTestID: 'tab-details' },
    },
    Matches: {
      screen: PokemonMatches,
      options: { tabBarButtonTestID: 'tab-matches' },
    },
  },
});

const InfoTabsNavigator = createComponentForStaticNavigation(
  InfoTabs,
...
